feat: delete layout